styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.cdnfonts.com/css/century-gothic');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Century Gothic', sans-serif;
}

html,
body {
  width: 100%;
  height: 100%;
  color: white;
  background-color: #000;
  scroll-behavior: smooth;
}

.parallax-item {
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  font-family: Montserrat, sans-serif;
  width: 100%;
}

@keyframes appear_in {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.parallax-item:first-child {
  animation: appear_in 0.5s ease-out 0s 1 normal forwards;
  height: 100vh;
  background: url('/leaves_neon_triangle.jpg');
  background-position: center;
}

.parallax-item:nth-child(2) {
  height: 300px;
  background: #000;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

.parallax-item:nth-child(3) {
  background: url('/leaves_neon_triangle_left_90.jpg');
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  height: 400px;
}

.parallax-item:nth-child(4) {
  height: 100vh;
  background: #000;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  /* Parallax Effect for DIV 3 */
  min-height: 600px;
}

.parallax-item:nth-child(5) {
  height: 400px;
  background: url('/leaves_neon_triangle_left_180.jpg');
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

.parallax-item:nth-child(6) {
  height: 100vh;
  background: #000;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  /* Parallax Effect for DIV 3 */
  min-height: 600px;
}

.parallax-item:nth-child(7) {
  height: 400px;
  background: url('/leaves_neon_triangle_left_270.jpg');
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

.parallax-item:nth-child(8) {
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

.ml {
  background: url('/leaves_neon_triangle_left_270.jpg');
}

label {
  position: absolute;
  top: 50%;
  left: 0px;
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  font-size: 16px;
  color: rgb(105, 105, 105);
  pointer-events: none;
  -webkit-transition: all 0.15s ease-out 0s;
  transition: all 0.15s ease-out 0s;
}

input {
  display: inline-block;
  padding: 5px 0;
  margin: 10px 0 0 0;
  font-size: 16px;
  background: none;
  color: white;
  outline: none;
  box-shadow: none !important;
}

input:focus+label,
input.has-value+label,
textarea:focus+label,
textarea.has-value+label {
  top: 5px;
  font-size: 14px;
  color: rgb(100, 100, 100);
}

textarea:focus+label,
textarea.has-value+label {
  top: 30px;
}

input:focus::-webkit-input-placeholder {
  color: transparent;
}

.select div {
  background: #000;
}

@keyframes appear_in {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.appear-in {
  animation: appear_in 0.5s ease-out 0s 1 normal forwards;
}

